--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="olti"><button>bosing</button></div>
 <br>
     <div class="yetti"><button>bosing</button></div>
-    
+    Anorboyev
 
    ---
 </body>
