--- a/index.html
+++ b/index.html
@@ -8,22 +8,17 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-   
-    <div class="bir"><button>bosing</button></div>
-<br>
-    <div class="ikki"><button>bosing</button></div>
-<br>
-    <div class="uch"><button>bosing</button></div>
-<br>
-    <div class="tort"><button>bosing</button></div>
-<br> 
-    <div class="besh"><button>bosing</button></div>
-<br>
-    <div class="olti"><button>bosing</button></div>
-<br>
-    <div class="yetti"><button>bosing</button></div>
-    Anorboyev
+    
+   <div class="bir"><button type="submit" id="btn">Tugmalar</button> </div>
+    <br>
+    <button type="submit" id="btn"> Bosing </button> 
+    <br>
+    <button type="submit" id="btn"> Bosing </button> 
+    <br>
+    <button type="submit" id="btn"> Bosing </button> 
 
-   ---
+
+
+
 </body>
 </html>
